--- a/jupyter_notebooks/etl.ipynb
+++ b/jupyter_notebooks/etl.ipynb
@@ -2411,7 +2411,191 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We can see that Timor-Leste is the only country with multiple entries. However, looking at the CO2 data in the DataFrame above, we can clearly see that Timor-Leste has consistently recorded CO2 values of 0 in those entries. Suggesting that the NaN values  were likely caused by zero division errors during the CO2 % calculation. Since CO2 levels did not change and stayed at 0, those values can all be replaced by 0 later."
+        "Timor-Leste is the only country with multiple entries. However, looking at the CO2 data in the DataFrame above, it is clear that Timor-Leste has consistently recorded CO2 values of 0 in those entries. Suggesting that the NaN values  were likely caused by zero division errors during the CO2 % calculation. Since CO2 levels did not change and stayed at 0, those values can all be replaced by 0 later. <br>\n",
+        "\n",
+        "The remaining entries will have to be compared with the original dataset to see if it is the earliest for that country."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Earliest Year in Original</th>\n",
+              "      <th>Year in Missing DataFrame</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country Name</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Andorra</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>1990</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Bhutan</th>\n",
+              "      <td>1970</td>\n",
+              "      <td>1970</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Botswana</th>\n",
+              "      <td>1972</td>\n",
+              "      <td>1972</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>British Virgin Islands</th>\n",
+              "      <td>1962</td>\n",
+              "      <td>1962</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Eritrea</th>\n",
+              "      <td>1994</td>\n",
+              "      <td>1994</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Lesotho</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>1990</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Maldives</th>\n",
+              "      <td>1971</td>\n",
+              "      <td>1971</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Marshall Islands</th>\n",
+              "      <td>1992</td>\n",
+              "      <td>1992</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Micronesia, Fed. Sts.</th>\n",
+              "      <td>1992</td>\n",
+              "      <td>1992</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Namibia</th>\n",
+              "      <td>1991</td>\n",
+              "      <td>1991</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Nauru</th>\n",
+              "      <td>1964</td>\n",
+              "      <td>1964</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Oman</th>\n",
+              "      <td>1964</td>\n",
+              "      <td>1964</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Seychelles</th>\n",
+              "      <td>1963</td>\n",
+              "      <td>1963</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Timor-Leste</th>\n",
+              "      <td>1994</td>\n",
+              "      <td>1994</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Turks and Caicos Islands</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>1990</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Tuvalu</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>1990</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Vanuatu</th>\n",
+              "      <td>1962</td>\n",
+              "      <td>1962</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>West Bank and Gaza</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>1990</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                          Earliest Year in Original  Year in Missing DataFrame\n",
+              "Country Name                                                                  \n",
+              "Andorra                                        1990                       1990\n",
+              "Bhutan                                         1970                       1970\n",
+              "Botswana                                       1972                       1972\n",
+              "British Virgin Islands                         1962                       1962\n",
+              "Eritrea                                        1994                       1994\n",
+              "Lesotho                                        1990                       1990\n",
+              "Maldives                                       1971                       1971\n",
+              "Marshall Islands                               1992                       1992\n",
+              "Micronesia, Fed. Sts.                          1992                       1992\n",
+              "Namibia                                        1991                       1991\n",
+              "Nauru                                          1964                       1964\n",
+              "Oman                                           1964                       1964\n",
+              "Seychelles                                     1963                       1963\n",
+              "Timor-Leste                                    1994                       1994\n",
+              "Turks and Caicos Islands                       1990                       1990\n",
+              "Tuvalu                                         1990                       1990\n",
+              "Vanuatu                                        1962                       1962\n",
+              "West Bank and Gaza                             1990                       1990"
+            ]
+          },
+          "execution_count": 48,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "missing_names = df_missing_filtered['Country Name'].unique() ## Unique country names with missing values\n",
+        "filtered_df_by_missing = df[df[\"Country Name\"].isin(missing_names)] ## Filter the orig DataFrame only showing countries in missing_names\n",
+        "df_orig = filtered_df_by_missing.groupby('Country Name')['Year'].min() ## Earliest year for missing_names in orig dataframe\n",
+        "df_miss = df_missing_filtered.groupby('Country Name')['Year'].min() ## Earliest year in missing values DataFrame\n",
+        "df_comparison = pd.DataFrame({'Earliest Year in Original': df_orig, \n",
+        "                              'Year in Missing DataFrame': df_miss}) ## compare\n",
+        "df_comparison"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Comparing the earliest year of entry in the original DataFrame, to the year of the entry with missing data for each country. They are all the same year, confirming that they are the first records for those countries. <br>\n",
+        "\n",
+        "It is now established that the missing CO2 % data values are due to a combination of:\n",
+        "\n",
+        "* First data entry\n",
+        "* Division by zero during CO2 % calculation.<br>\n",
+        "\n",
+        "For both scenarios, it is okay to replace NaN values with 0. This is better than removing those entries completely as that can lead to incomplete or inaccurate analysis and visualisation\n"
       ]
     },
     {
@@ -2445,23 +2629,8 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
         "A value of 0 indicates that there are no duplicated data in the DataFrame. This is expected as the source dataset has already been cleaned."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def get_value_counts(df, column_name):\n",
-        "    return df[column_name].value_counts()"
       ]
     },
     {
